css/main.css
html {
  width: 100%;
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
  background-color: #e0e0e0;
  font-family: 'Hind Vadodara', sans-serif;
}

header.page-header,
footer.page-footer {
  background-color: #005289;
  padding: 50px 0;
  text-align: center;
}

footer.page-footer {
  padding: 10px 0;
}

h1 {
  font-family: 'Roboto Slab', serif;
  margin-top: 0;
  color: #fff;
}

a {
  text-decoration: none;
}

header.page-header p,
footer.page-footer p {
  width: 80%;
  max-width: 1400px;
  line-height: 120%;
  color: #eee;
  margin: 0px auto 10px auto;
}

header.page-header a,
footer.page-footer a {
  color: #7ACBFF;
}

.timeline {
  position: relative;
  width: 90%;
  max-width: 1600px;
  margin: 0px auto;
  padding: 20px 0 100px 0;
}

.timeline::before {
  content: '';
  position: absolute;
  top: 0;
  left: 50%;
  height: 100%;
  width: 4px;
  background: #ccc;
}

.no-js .timeline-filter-wrapper {
  display: none;
}

.timeline-filter-wrapper {
  background-color: #ccc;
  padding: 10px 0;
}

.timeline-filter {
  width: 90%;
  max-width: 1600px;
  margin: 0px auto;
}

.timeline-filter ul {
  list-style: none;
  padding: 0;
  margin: 0;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
}

.timeline-filter ul li {
  display: inline;
  padding-right: 20px;
}

.timeline-entry {
  position: relative;
  margin-top: -75px;
}

.timeline-entry.first {
  margin-top: 10px;
}

.timeline-entry.short {
  margin-top: -50px;
}

.timeline-icon {
  position: absolute;
  left: 50%;
  width: 40px;
  height: 40px;
  margin-left: -20px;
  border: 4px solid #ccc;
  border-radius: 50%;
  box-shadow: 0px 1px 1px #999;
  text-align: center;
  vertical-align: middle;
}

.timeline-icon i {
  color: #fff;
  font-size: 20px;
  line-height: 40px;
}

.timeline-icon.green {
  background-color: #59BF51;
}

.timeline-icon.red {
  background-color: #BF413E;
}

.timeline-icon.grey {
  background-color: #999;
}

.timeline-description {
  box-sizing: border-box;
  position: relative;
  width: 45%;
  background-color: #fff;
  padding: 20px;
  box-shadow: 0px 1px 2px #999;
  display: inline-block;
  z-index: 1;
}

.sub-entry {
  clear: both;
  margin-top: 30px;
}

.timeline-entry.odd .timeline-description {
  margin-left: 55%;
}

.timeline-description:after {
  top: 20px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: #e0e0e0;
  border-width: 10px;
  margin-top: -10px;
}

.timeline-entry.odd .timeline-description:after {
  right: 100%;
  border-right-color: #fff;
}

.timeline-description .timestamp {
  font-style: italic;
  font-size: 80%;
}

.timeline-description .timestamp .note {
  color: #888;
}

.timeline-description h2 {
  font-family: 'Roboto Slab', serif;
  line-height: 110%;
}

.timeline-description h2,
.timeline-description ul {
  margin: 5px 0;
  -webkit-margin-before: 5px;
  -webkit-margin-after: 5px;
}

.timeline-description p,
.timeline-description ul {
  margin: 5px 0 10px 0;
  -webkit-margin-before: 5px;
  -webkit-margin-after: 10px;
}

.timeline-description img {
  max-width: 150px;
  display: block;
}

.timeline-description .landscape img {
  max-width: 200px;
}

.image-right {
  float: right;
  padding: 10px 0 20px 20px;
}

.captioned-image .caption {
  display: block;
  line-height: 120%;
  font-style: italic;
  font-size: 90%;
}

.captioned-image .attribution-link {
  font-size: 70%;
}

.captioned-image {
  max-width: 150px;
  clear: both;
}

.captioned-image.landscape {
  max-width: 200px;
}

section.attribution {
  width: 90%;
  max-width: 1600px;
  margin: 0 auto;
}

/* Make this less sad on mobile */

@media only screen and (min-device-width: 600px) {
  .timeline-entry.even .timeline-description:after {
    left: 100%;
    border-left-color: #fff;
  }
}

@media only screen and (max-device-width: 600px) {
  .timeline::before {
    left: 0;
  }

  .timeline-icon {
    left: 0; 
  }

  .timeline-entry {
    margin-top: 25px;
  }

  .timeline-entry.odd .timeline-description,
  .timeline-entry.even .timeline-description {
    margin-left: 50px;
  }

  .timeline-entry.even .timeline-description:after {
    right: 100%;
    border-right-color: #fff;
  }

  .timeline-description {
    width: 90%;
  }

}

/* Fallback for no Javascript */

.no-js .timeline::before {
  left: 0;
}

.no-js .timeline-icon {
  left: 0; 
}

.no-js .timeline-entry {
  margin-top: 25px;
}

.no-js .timeline-entry .timeline-description {
  margin-left: 50px;
}

.no-js .timeline-entry .timeline-description:after {
  right: 100%;
  border-right-color: #fff;
}

.no-js .timeline-description {
  width: 90%;
}

